# OpenClaw

./: .gitignore  QUotationTestFile.py  Robomatics_Customer_Listing.csv  VERSION  Validator.py  auto_claw.py  brand_inference.py  burkert_obsolete_lookup.py  burkert_price_list.py  channel_router.py  decision_maker.py  email_attachment_processor.py  email_inquiry_handler.py  email_message_classifier.py  extractor.py  history_checker.py  image_inquiry_analyzer.py  inquiry_drafter.py  inquiry_extraction_helper.py  local_ocr.py  main.py  markem_imaje_price_list.py  master_claw.py  message_classification_corrections.csv  message_learning_store.py  non_standard_inquiry_handler.py  obm_quotation_helper.py  office_check.py  openclaw_busy.py  openclaw_email_config.py  openclaw_inquiry_engine.py  openclaw_log.py  openclaw_main.py  parker_price_list.py  product_verification.py  purchasing_whatsapp.py  purchasing_whatsapp_watcher.py  pyproject.toml  quotation_image_extractor.py  requirements.txt  (+16 more)
InquiryExtractionHelperOLD/: V106inquiry_extraction_helper.py  inquiry_extraction_helperv107.py  v105inquiry_extraction_helper.py
OBM_QuotationHelperOld/: obm_quotation_helper.py
Windows-Copilot-API/: README.md  requirements.txt
autoclaw_Old version/: OLD_auto_claw.py  auto_claw_v1.07afternon standard part.py  auto_claw_v109.py  auto_clawv1.07email.py  auto_clawv108.py  auto_clawv110.py  auto_clawv111.py
openclaw_inquiry_engineOLD/: V106openclaw_inquiry_engine.py  openclaw_inquiry_enginev105.py  openclaw_inquiry_enginev107.py
scripts/: build_parker_price_db.py  check_remote_access.sh  (+35 more)
(+34 files in other folders)
